stderr
JudgeMan.java:131: error: illegal start of type
    if(straightCounter == 4){
    ^
JudgeMan.java:131: error: <identifier> expected
    if(straightCounter == 4){
                      ^
2 errors
